fix: fix checkboxes submission if false

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -80,5 +80,44 @@
     "/js/app.baffbc99c01b1d18b6f9.hot-update.js": "/js/app.baffbc99c01b1d18b6f9.hot-update.js",
     "/js/app.bb53c4b992a4b5aa1da7.hot-update.js": "/js/app.bb53c4b992a4b5aa1da7.hot-update.js",
     "/js/app.ca832024f4403a88c4fb.hot-update.js": "/js/app.ca832024f4403a88c4fb.hot-update.js",
-    "/js/app.c6254d14003ee61546fe.hot-update.js": "/js/app.c6254d14003ee61546fe.hot-update.js"
+    "/js/app.c6254d14003ee61546fe.hot-update.js": "/js/app.c6254d14003ee61546fe.hot-update.js",
+    "/js/app.5aa0f7b2925f74a9f3e1.hot-update.js": "/js/app.5aa0f7b2925f74a9f3e1.hot-update.js",
+    "/js/app.c18c92a856716df8ed3d.hot-update.js": "/js/app.c18c92a856716df8ed3d.hot-update.js",
+    "/js/app.5aed25d29d91da92f762.hot-update.js": "/js/app.5aed25d29d91da92f762.hot-update.js",
+    "/js/app.d0b00830293cdd308803.hot-update.js": "/js/app.d0b00830293cdd308803.hot-update.js",
+    "/js/app.292a0d5d8bd7879d5197.hot-update.js": "/js/app.292a0d5d8bd7879d5197.hot-update.js",
+    "/js/app.554506a27d55644d7c88.hot-update.js": "/js/app.554506a27d55644d7c88.hot-update.js",
+    "/js/app.23f25a984b5b0684f7b8.hot-update.js": "/js/app.23f25a984b5b0684f7b8.hot-update.js",
+    "/js/app.11ea9fdb8448ef7e5270.hot-update.js": "/js/app.11ea9fdb8448ef7e5270.hot-update.js",
+    "/js/app.0b41dfce29691e96f67b.hot-update.js": "/js/app.0b41dfce29691e96f67b.hot-update.js",
+    "/js/app.5a7bff02016e078172ce.hot-update.js": "/js/app.5a7bff02016e078172ce.hot-update.js",
+    "/js/app.d21556ecb6d362b9fefe.hot-update.js": "/js/app.d21556ecb6d362b9fefe.hot-update.js",
+    "/js/app.7ba76d78dffde2876927.hot-update.js": "/js/app.7ba76d78dffde2876927.hot-update.js",
+    "/js/app.e46175ebcabd752bd4d5.hot-update.js": "/js/app.e46175ebcabd752bd4d5.hot-update.js",
+    "/js/app.8ba529d8a987f3b99e2f.hot-update.js": "/js/app.8ba529d8a987f3b99e2f.hot-update.js",
+    "/js/app.3492e5b0479aee8f1887.hot-update.js": "/js/app.3492e5b0479aee8f1887.hot-update.js",
+    "/js/app.6e0ddb7404cff54694be.hot-update.js": "/js/app.6e0ddb7404cff54694be.hot-update.js",
+    "/js/app.30bfca96cb795d6401ea.hot-update.js": "/js/app.30bfca96cb795d6401ea.hot-update.js",
+    "/js/app.e31a1d16d17c475b205e.hot-update.js": "/js/app.e31a1d16d17c475b205e.hot-update.js",
+    "/js/app.427905878ad71325bb11.hot-update.js": "/js/app.427905878ad71325bb11.hot-update.js",
+    "/js/app.ad5659268c471992df61.hot-update.js": "/js/app.ad5659268c471992df61.hot-update.js",
+    "/js/app.12c5c6605c7d3a485521.hot-update.js": "/js/app.12c5c6605c7d3a485521.hot-update.js",
+    "/js/app.8259f9ce0c5d97647760.hot-update.js": "/js/app.8259f9ce0c5d97647760.hot-update.js",
+    "/js/app.61d05e9dc378f8b997c0.hot-update.js": "/js/app.61d05e9dc378f8b997c0.hot-update.js",
+    "/js/app.0471fd6ae765613650da.hot-update.js": "/js/app.0471fd6ae765613650da.hot-update.js",
+    "/js/app.8596492a2fbc8f96e0ff.hot-update.js": "/js/app.8596492a2fbc8f96e0ff.hot-update.js",
+    "/js/app.60e3e7096d3a6e54fd03.hot-update.js": "/js/app.60e3e7096d3a6e54fd03.hot-update.js",
+    "/js/app.884f835056c638c69227.hot-update.js": "/js/app.884f835056c638c69227.hot-update.js",
+    "/js/app.0c97d6831d3b19992c7d.hot-update.js": "/js/app.0c97d6831d3b19992c7d.hot-update.js",
+    "/js/app.2e316fc9d9b036140c1f.hot-update.js": "/js/app.2e316fc9d9b036140c1f.hot-update.js",
+    "/js/app.a32332cea88fae261b3a.hot-update.js": "/js/app.a32332cea88fae261b3a.hot-update.js",
+    "/js/app.63460c1d9d2d86d9bb13.hot-update.js": "/js/app.63460c1d9d2d86d9bb13.hot-update.js",
+    "/js/app.9cc8fd3c949dbf4c0198.hot-update.js": "/js/app.9cc8fd3c949dbf4c0198.hot-update.js",
+    "/js/app.274e2398a22d33b77b10.hot-update.js": "/js/app.274e2398a22d33b77b10.hot-update.js",
+    "/js/app.3e226d275706d1996064.hot-update.js": "/js/app.3e226d275706d1996064.hot-update.js",
+    "/js/app.d85e68271996b8b94470.hot-update.js": "/js/app.d85e68271996b8b94470.hot-update.js",
+    "/js/app.60904eee50faa1a641e2.hot-update.js": "/js/app.60904eee50faa1a641e2.hot-update.js",
+    "/js/app.15d3e1cda5581af9f41f.hot-update.js": "/js/app.15d3e1cda5581af9f41f.hot-update.js",
+    "/js/app.9e75dffcb1e50ecbb472.hot-update.js": "/js/app.9e75dffcb1e50ecbb472.hot-update.js",
+    "/js/app.80c89ecee4c721af7f71.hot-update.js": "/js/app.80c89ecee4c721af7f71.hot-update.js"
 }
