fix: make migrations MySQL and SQLite friendly

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,123 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.9a1b86c8dd2a9b989f6d.hot-update.js": "/js/app.9a1b86c8dd2a9b989f6d.hot-update.js",
-    "/js/app.2d473aa84dc3df02af08.hot-update.js": "/js/app.2d473aa84dc3df02af08.hot-update.js",
-    "/js/app.26d701659ac1a5f0f52f.hot-update.js": "/js/app.26d701659ac1a5f0f52f.hot-update.js",
-    "/js/app.c1ae55635a37acac1e3a.hot-update.js": "/js/app.c1ae55635a37acac1e3a.hot-update.js",
-    "/js/app.42a9083897e5e376f3d8.hot-update.js": "/js/app.42a9083897e5e376f3d8.hot-update.js",
-    "/js/app.60611efe01868f2f1c88.hot-update.js": "/js/app.60611efe01868f2f1c88.hot-update.js",
-    "/js/app.c0b4534017732b4e4a21.hot-update.js": "/js/app.c0b4534017732b4e4a21.hot-update.js",
-    "/js/app.1dc35b948079da2d8e2e.hot-update.js": "/js/app.1dc35b948079da2d8e2e.hot-update.js",
-    "/js/app.64612a131fc2e087c33c.hot-update.js": "/js/app.64612a131fc2e087c33c.hot-update.js",
-    "/js/app.02cdc971238956c69ab3.hot-update.js": "/js/app.02cdc971238956c69ab3.hot-update.js",
-    "/js/app.8671be676f441a21f2ac.hot-update.js": "/js/app.8671be676f441a21f2ac.hot-update.js",
-    "/js/app.58da3c19a0384ccaf351.hot-update.js": "/js/app.58da3c19a0384ccaf351.hot-update.js",
-    "/js/app.caa37fdfae994e519b65.hot-update.js": "/js/app.caa37fdfae994e519b65.hot-update.js",
-    "/js/app.ac6fc841ba0b2347f3e7.hot-update.js": "/js/app.ac6fc841ba0b2347f3e7.hot-update.js",
-    "/js/app.283a83209e2ca748caa2.hot-update.js": "/js/app.283a83209e2ca748caa2.hot-update.js",
-    "/js/app.3bd0652b6f5cd26268d0.hot-update.js": "/js/app.3bd0652b6f5cd26268d0.hot-update.js",
-    "/js/app.69ab19886315b262e1cd.hot-update.js": "/js/app.69ab19886315b262e1cd.hot-update.js",
-    "/js/app.410c917bedfd4b4a7321.hot-update.js": "/js/app.410c917bedfd4b4a7321.hot-update.js",
-    "/js/app.f7c4a7397e9129c0ef88.hot-update.js": "/js/app.f7c4a7397e9129c0ef88.hot-update.js",
-    "/js/app.5f65bd2cfa664d863fe6.hot-update.js": "/js/app.5f65bd2cfa664d863fe6.hot-update.js",
-    "/js/app.86987b57ff6bc4d2a7b2.hot-update.js": "/js/app.86987b57ff6bc4d2a7b2.hot-update.js",
-    "/js/app.f1a383dd97b6d7223fc1.hot-update.js": "/js/app.f1a383dd97b6d7223fc1.hot-update.js",
-    "/js/app.33d0a087f70b1928db4d.hot-update.js": "/js/app.33d0a087f70b1928db4d.hot-update.js",
-    "/js/app.a66dc1cb34c3bf45c6c1.hot-update.js": "/js/app.a66dc1cb34c3bf45c6c1.hot-update.js",
-    "/js/app.8586232e4297935393c6.hot-update.js": "/js/app.8586232e4297935393c6.hot-update.js",
-    "/js/app.83cf43c4a3b2d72faca0.hot-update.js": "/js/app.83cf43c4a3b2d72faca0.hot-update.js",
-    "/js/app.6bff676de9dda65a122d.hot-update.js": "/js/app.6bff676de9dda65a122d.hot-update.js",
-    "/js/app.9f372b78e2364999766d.hot-update.js": "/js/app.9f372b78e2364999766d.hot-update.js",
-    "/js/app.81600fd67ac5d2a70873.hot-update.js": "/js/app.81600fd67ac5d2a70873.hot-update.js",
-    "/js/app.f43635ae64c9ca42663b.hot-update.js": "/js/app.f43635ae64c9ca42663b.hot-update.js",
-    "/js/app.db57e98ec9dbe05534ad.hot-update.js": "/js/app.db57e98ec9dbe05534ad.hot-update.js",
-    "/js/app.7878ab4c0466c48c72ce.hot-update.js": "/js/app.7878ab4c0466c48c72ce.hot-update.js",
-    "/js/app.1231b89a93c03340df00.hot-update.js": "/js/app.1231b89a93c03340df00.hot-update.js",
-    "/js/app.d8b006a7a07cf39c6078.hot-update.js": "/js/app.d8b006a7a07cf39c6078.hot-update.js",
-    "/js/app.e719fff9a05d3011fbf1.hot-update.js": "/js/app.e719fff9a05d3011fbf1.hot-update.js",
-    "/js/app.80fd05987d8950ee4061.hot-update.js": "/js/app.80fd05987d8950ee4061.hot-update.js",
-    "/js/app.33e7f6386950f904f6e4.hot-update.js": "/js/app.33e7f6386950f904f6e4.hot-update.js",
-    "/js/app.81e0a60ff3365d6b71a0.hot-update.js": "/js/app.81e0a60ff3365d6b71a0.hot-update.js",
-    "/js/app.b5a4d74c3449ad50532d.hot-update.js": "/js/app.b5a4d74c3449ad50532d.hot-update.js",
-    "/js/app.14a9178dd51433b75e8e.hot-update.js": "/js/app.14a9178dd51433b75e8e.hot-update.js",
-    "/js/app.23ddec4d8379dccf4fdf.hot-update.js": "/js/app.23ddec4d8379dccf4fdf.hot-update.js",
-    "/js/app.db40af26751643e67fae.hot-update.js": "/js/app.db40af26751643e67fae.hot-update.js",
-    "/js/app.ca0759fe79976ea6075b.hot-update.js": "/js/app.ca0759fe79976ea6075b.hot-update.js",
-    "/js/app.9b45ab9b971e814fe803.hot-update.js": "/js/app.9b45ab9b971e814fe803.hot-update.js",
-    "/js/app.cb4a2fcd2c9f6acb59f2.hot-update.js": "/js/app.cb4a2fcd2c9f6acb59f2.hot-update.js",
-    "/js/app.03ed3af921f0817dc93e.hot-update.js": "/js/app.03ed3af921f0817dc93e.hot-update.js",
-    "/js/app.14190b234559e55f6d0a.hot-update.js": "/js/app.14190b234559e55f6d0a.hot-update.js",
-    "/js/app.1d98d2b3d4bc52393063.hot-update.js": "/js/app.1d98d2b3d4bc52393063.hot-update.js",
-    "/js/app.9bc2c1e25b12c4cf0ad7.hot-update.js": "/js/app.9bc2c1e25b12c4cf0ad7.hot-update.js",
-    "/js/app.4ba55ca49ee0a1e444d1.hot-update.js": "/js/app.4ba55ca49ee0a1e444d1.hot-update.js",
-    "/js/app.48254897523990759dec.hot-update.js": "/js/app.48254897523990759dec.hot-update.js",
-    "/js/app.6ed0c65470d48de650ad.hot-update.js": "/js/app.6ed0c65470d48de650ad.hot-update.js",
-    "/js/app.1d08b1922c8b9a6b4011.hot-update.js": "/js/app.1d08b1922c8b9a6b4011.hot-update.js",
-    "/js/app.1bd0790a165213abd099.hot-update.js": "/js/app.1bd0790a165213abd099.hot-update.js",
-    "/js/app.f71bd396394cf006d3e9.hot-update.js": "/js/app.f71bd396394cf006d3e9.hot-update.js",
-    "/js/app.bb8b35954b80aeb28185.hot-update.js": "/js/app.bb8b35954b80aeb28185.hot-update.js",
-    "/js/app.908db8c21b29a4c09c59.hot-update.js": "/js/app.908db8c21b29a4c09c59.hot-update.js",
-    "/js/app.43f372f09a4793707726.hot-update.js": "/js/app.43f372f09a4793707726.hot-update.js",
-    "/js/app.c04a56b98e85e5d201df.hot-update.js": "/js/app.c04a56b98e85e5d201df.hot-update.js",
-    "/js/app.a9b9a760e7f8b9cc97ad.hot-update.js": "/js/app.a9b9a760e7f8b9cc97ad.hot-update.js",
-    "/js/app.e8f4d720cdaae257bfe2.hot-update.js": "/js/app.e8f4d720cdaae257bfe2.hot-update.js",
-    "/js/app.64c14ed1e3751277d2ef.hot-update.js": "/js/app.64c14ed1e3751277d2ef.hot-update.js",
-    "/js/app.40846f64e7e4f9daf955.hot-update.js": "/js/app.40846f64e7e4f9daf955.hot-update.js",
-    "/js/app.c1ee1558e08e481233df.hot-update.js": "/js/app.c1ee1558e08e481233df.hot-update.js",
-    "/js/app.2eeaacd6999cc19abaea.hot-update.js": "/js/app.2eeaacd6999cc19abaea.hot-update.js",
-    "/js/app.a7d165de661d5ac5563c.hot-update.js": "/js/app.a7d165de661d5ac5563c.hot-update.js",
-    "/js/app.8ec2f63a328e938a47b7.hot-update.js": "/js/app.8ec2f63a328e938a47b7.hot-update.js",
-    "/js/app.957c9901ed0a32abb9ab.hot-update.js": "/js/app.957c9901ed0a32abb9ab.hot-update.js",
-    "/js/app.aff72b1eb406537e8f8e.hot-update.js": "/js/app.aff72b1eb406537e8f8e.hot-update.js",
-    "/js/app.7f568c9218e9e62459ab.hot-update.js": "/js/app.7f568c9218e9e62459ab.hot-update.js",
-    "/js/app.14215b65c42058ea29cc.hot-update.js": "/js/app.14215b65c42058ea29cc.hot-update.js",
-    "/js/app.90a9f75cb09fb48ec84c.hot-update.js": "/js/app.90a9f75cb09fb48ec84c.hot-update.js",
-    "/js/app.5b829e658e7b71904990.hot-update.js": "/js/app.5b829e658e7b71904990.hot-update.js",
-    "/js/app.46c22e6687ac2677fcb2.hot-update.js": "/js/app.46c22e6687ac2677fcb2.hot-update.js",
-    "/js/app.f47e5c6dee586558013c.hot-update.js": "/js/app.f47e5c6dee586558013c.hot-update.js",
-    "/js/app.a0152c677299a305a8f9.hot-update.js": "/js/app.a0152c677299a305a8f9.hot-update.js",
-    "/js/app.baffbc99c01b1d18b6f9.hot-update.js": "/js/app.baffbc99c01b1d18b6f9.hot-update.js",
-    "/js/app.bb53c4b992a4b5aa1da7.hot-update.js": "/js/app.bb53c4b992a4b5aa1da7.hot-update.js",
-    "/js/app.ca832024f4403a88c4fb.hot-update.js": "/js/app.ca832024f4403a88c4fb.hot-update.js",
-    "/js/app.c6254d14003ee61546fe.hot-update.js": "/js/app.c6254d14003ee61546fe.hot-update.js",
-    "/js/app.5aa0f7b2925f74a9f3e1.hot-update.js": "/js/app.5aa0f7b2925f74a9f3e1.hot-update.js",
-    "/js/app.c18c92a856716df8ed3d.hot-update.js": "/js/app.c18c92a856716df8ed3d.hot-update.js",
-    "/js/app.5aed25d29d91da92f762.hot-update.js": "/js/app.5aed25d29d91da92f762.hot-update.js",
-    "/js/app.d0b00830293cdd308803.hot-update.js": "/js/app.d0b00830293cdd308803.hot-update.js",
-    "/js/app.292a0d5d8bd7879d5197.hot-update.js": "/js/app.292a0d5d8bd7879d5197.hot-update.js",
-    "/js/app.554506a27d55644d7c88.hot-update.js": "/js/app.554506a27d55644d7c88.hot-update.js",
-    "/js/app.23f25a984b5b0684f7b8.hot-update.js": "/js/app.23f25a984b5b0684f7b8.hot-update.js",
-    "/js/app.11ea9fdb8448ef7e5270.hot-update.js": "/js/app.11ea9fdb8448ef7e5270.hot-update.js",
-    "/js/app.0b41dfce29691e96f67b.hot-update.js": "/js/app.0b41dfce29691e96f67b.hot-update.js",
-    "/js/app.5a7bff02016e078172ce.hot-update.js": "/js/app.5a7bff02016e078172ce.hot-update.js",
-    "/js/app.d21556ecb6d362b9fefe.hot-update.js": "/js/app.d21556ecb6d362b9fefe.hot-update.js",
-    "/js/app.7ba76d78dffde2876927.hot-update.js": "/js/app.7ba76d78dffde2876927.hot-update.js",
-    "/js/app.e46175ebcabd752bd4d5.hot-update.js": "/js/app.e46175ebcabd752bd4d5.hot-update.js",
-    "/js/app.8ba529d8a987f3b99e2f.hot-update.js": "/js/app.8ba529d8a987f3b99e2f.hot-update.js",
-    "/js/app.3492e5b0479aee8f1887.hot-update.js": "/js/app.3492e5b0479aee8f1887.hot-update.js",
-    "/js/app.6e0ddb7404cff54694be.hot-update.js": "/js/app.6e0ddb7404cff54694be.hot-update.js",
-    "/js/app.30bfca96cb795d6401ea.hot-update.js": "/js/app.30bfca96cb795d6401ea.hot-update.js",
-    "/js/app.e31a1d16d17c475b205e.hot-update.js": "/js/app.e31a1d16d17c475b205e.hot-update.js",
-    "/js/app.427905878ad71325bb11.hot-update.js": "/js/app.427905878ad71325bb11.hot-update.js",
-    "/js/app.ad5659268c471992df61.hot-update.js": "/js/app.ad5659268c471992df61.hot-update.js",
-    "/js/app.12c5c6605c7d3a485521.hot-update.js": "/js/app.12c5c6605c7d3a485521.hot-update.js",
-    "/js/app.8259f9ce0c5d97647760.hot-update.js": "/js/app.8259f9ce0c5d97647760.hot-update.js",
-    "/js/app.61d05e9dc378f8b997c0.hot-update.js": "/js/app.61d05e9dc378f8b997c0.hot-update.js",
-    "/js/app.0471fd6ae765613650da.hot-update.js": "/js/app.0471fd6ae765613650da.hot-update.js",
-    "/js/app.8596492a2fbc8f96e0ff.hot-update.js": "/js/app.8596492a2fbc8f96e0ff.hot-update.js",
-    "/js/app.60e3e7096d3a6e54fd03.hot-update.js": "/js/app.60e3e7096d3a6e54fd03.hot-update.js",
-    "/js/app.884f835056c638c69227.hot-update.js": "/js/app.884f835056c638c69227.hot-update.js",
-    "/js/app.0c97d6831d3b19992c7d.hot-update.js": "/js/app.0c97d6831d3b19992c7d.hot-update.js",
-    "/js/app.2e316fc9d9b036140c1f.hot-update.js": "/js/app.2e316fc9d9b036140c1f.hot-update.js",
-    "/js/app.a32332cea88fae261b3a.hot-update.js": "/js/app.a32332cea88fae261b3a.hot-update.js",
-    "/js/app.63460c1d9d2d86d9bb13.hot-update.js": "/js/app.63460c1d9d2d86d9bb13.hot-update.js",
-    "/js/app.9cc8fd3c949dbf4c0198.hot-update.js": "/js/app.9cc8fd3c949dbf4c0198.hot-update.js",
-    "/js/app.274e2398a22d33b77b10.hot-update.js": "/js/app.274e2398a22d33b77b10.hot-update.js",
-    "/js/app.3e226d275706d1996064.hot-update.js": "/js/app.3e226d275706d1996064.hot-update.js",
-    "/js/app.d85e68271996b8b94470.hot-update.js": "/js/app.d85e68271996b8b94470.hot-update.js",
-    "/js/app.60904eee50faa1a641e2.hot-update.js": "/js/app.60904eee50faa1a641e2.hot-update.js",
-    "/js/app.15d3e1cda5581af9f41f.hot-update.js": "/js/app.15d3e1cda5581af9f41f.hot-update.js",
-    "/js/app.9e75dffcb1e50ecbb472.hot-update.js": "/js/app.9e75dffcb1e50ecbb472.hot-update.js",
-    "/js/app.80c89ecee4c721af7f71.hot-update.js": "/js/app.80c89ecee4c721af7f71.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
